# WindowsServicesGui

./: Cargo.toml  README.md  app.manifest  app.rc  build.rs
.github/workflows/: release.yml
src/: main.rs
