[package]
name = "windows-service-gui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
eframe = { version = "0.29", default-features = true }
fuzzy-matcher = "0.3"
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_System_Services", "Win32_Security", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
incremental = false
